// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component renders properly centerPage false 1`] = `
<styled.div
  centerPage={false}
>
  <Alert
    closeAriaLabel="Close"
    color="dark"
    fade={true}
    isOpen={true}
    tag="div"
    transition={
      Object {
        "appear": true,
        "baseClass": "fade",
        "baseClassActive": "show",
        "enter": true,
        "exit": true,
        "in": true,
        "mountOnEnter": false,
        "onEnter": [Function],
        "onEntered": [Function],
        "onEntering": [Function],
        "onExit": [Function],
        "onExited": [Function],
        "onExiting": [Function],
        "tag": "div",
        "timeout": 150,
        "unmountOnExit": true,
      }
    }
  >
    error
  </Alert>
</styled.div>
`;

exports[`Alert component renders properly centerPage true 1`] = `
<styled.div
  centerPage={true}
>
  <Alert
    closeAriaLabel="Close"
    color="dark"
    fade={true}
    isOpen={true}
    tag="div"
    transition={
      Object {
        "appear": true,
        "baseClass": "fade",
        "baseClassActive": "show",
        "enter": true,
        "exit": true,
        "in": true,
        "mountOnEnter": false,
        "onEnter": [Function],
        "onEntered": [Function],
        "onEntering": [Function],
        "onExit": [Function],
        "onExited": [Function],
        "onExiting": [Function],
        "tag": "div",
        "timeout": 150,
        "unmountOnExit": true,
      }
    }
  >
    error
  </Alert>
</styled.div>
`;
